--- a/cloudformation/modules/ec2.yaml
+++ b/cloudformation/modules/ec2.yaml
@@ -5,21 +5,46 @@ Parameters:
   MyKeyPair:
     Description: Chon Key Pair de SSH vao EC2
     Type: AWS::EC2::KeyPair::KeyName
-    Default: 2352xxxx
+    # Default: 2352xxxx
+
+  AmiId:
+    Description: AMI ID for EC2 Instances
+    Type: AWS::EC2::Image::Id
+    # Default: ami-0c398cb65a93047f2  # Amazon Linux 2 in us-east-1
+
+  PublicSubnetId:
+    Description: Subnet ID for Public EC2
+    Type: AWS::EC2::Subnet::Id
+    # Default: !ImportValue Group09PublicSubnetId
+  
+  PrivateSubnetId:
+    Description: Subnet ID for Private EC2
+    Type: AWS::EC2::Subnet::Id
+    # Default: !ImportValue Group09PrivateSubnetId
+
+  PublicSGID:
+    Description: Security Group ID for Public EC2
+    Type: AWS::EC2::SecurityGroup::Id
+    # Default: !ImportValue Group09PublicSGID
+
+  PrivateSGID:
+    Description: Security Group ID for Private EC2
+    Type: AWS::EC2::SecurityGroup::Id
+    # Default: !ImportValue Group09PrivateSGID
 
 Resources:
   Ec2Public:
     Type: AWS::EC2::Instance
     Properties:
-      ImageId: ami-0c398cb65a93047f2
+      ImageId: !Ref AmiId
       InstanceType: t2.micro
       KeyName: !Ref MyKeyPair
       NetworkInterfaces: 
         - AssociatePublicIpAddress: "true"
           DeviceIndex: "0"
-          SubnetId: !ImportValue Group09PublicSubnetId
+          SubnetId: !Ref PublicSubnetId
           GroupSet: 
-            - !ImportValue Group09PublicSGID
+            - !Ref PublicSGID
       Tags:
         - Key: Name
           Value: ec2-public-group09
@@ -34,9 +59,9 @@ Resources:
         - AssociatePublicIpAddress: "false"  
           DeviceIndex: "0"
           DeleteOnTermination: "true"
-          SubnetId: !ImportValue Group09PrivateSubnetId 
+          SubnetId: !Ref PrivateSubnetId
           GroupSet: 
-            - !ImportValue Group09PrivateSGID
+            - !Ref PrivateSGID
       Tags:
         - Key: Name
           Value: ec2-private-group09
