--- a/cloudformation/main.yaml
+++ b/cloudformation/main.yaml
@@ -87,6 +87,8 @@ Resources:
         PrivateSubnetId: !GetAtt VPCStack.Outputs.PrivateSubnetId
         PublicSGId: !GetAtt SecurityGroupsStack.Outputs.PublicSGID
         PrivateSGId: !GetAtt SecurityGroupsStack.Outputs.PrivateSGID
+        PublicInstanceName: ec2-public-group09
+        PrivateInstanceName: ec2-private-group09
 
 Outputs:
   # Lấy thông tin từ Stack con ra ngoài Stack cha để tiện theo dõi
