--- a/cloudformation/main.yaml
+++ b/cloudformation/main.yaml
@@ -79,6 +79,8 @@ Resources:
         PrivateSGID: !GetAtt SecurityGroupsStack.Outputs.PrivateSGID
         PublicInstanceName: ec2-public-group09
         PrivateInstanceName: ec2-private-group09
+        PublicSGName: public-sg-group09
+        PrivateSGName: private-sg-group09
 
 Outputs:
   StackVPCID:
